msgArea overflow problem solved

--- a/chatGPT/src/App/app.css
+++ b/chatGPT/src/App/app.css
@@ -48,12 +48,14 @@ video {
 }
 
 .msgArea {
-  overflow-y: scroll;
-  min-height: fit-content;
+  overflow-y: auto;
   max-height: 70vh;
   transition: 0.3s;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
+
 
 .inputbox {
   /* background-color: var(--background); */
@@ -239,7 +241,7 @@ video {
 .hamburger {
   /* color: var(--font-color); */
   position: absolute;
-  right: -22px;
+  right: -21px;
   transform: translate(45%);
   border: 1px solid #ffffff7b;
   border-top-right-radius: 5px;
